--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^3.10.1",
     "lusca": "^1.3.0",
     "method-override": "^2.3.5",
+    "mongoose": "^4.6.8",
     "morgan": "~1.6.1",
     "parse": "^1.5.0",
     "randomcolor": "^0.4.4",
